fixed letter spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,7 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  letter-spacing: 0.4px;
 }
 
 
@@ -99,7 +100,7 @@ p, ul {
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 138.889% */
-  letter-spacing: 0.36px;
+  letter-spacing: 0.4px;
 }
 
 a {
